frontend/test/should_fail/index_exec_node_fromIndexFromToAsArrayDescending_return_value_mismatch.grg
#using "index_exec_model.gm"

sequence s
{
	{ i:array<AEdge>=nodesFromIndexAsArrayDescending(fooi) }
}
